Fix footer - too high on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ main {
 
 .container {
     /*height: 500px;*/
-    padding-bottom: 50px;
+    padding-bottom: 100px;
 }
 
 .header {
